# project-papa-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
include/: greet.h
lib/: CMakeLists.txt
lib/oscpkt/: udp.hh
lib/server_shm/: server_shm.hpp
release/mac/: .gitignore  setup.sh  start.sh
src/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt
src/main/include/: pi_osc_handler.h  pi_subscriptions.h  pi_websocket_server.h
src/main/java/com/projectpapa/SonicPi/: Command.java  Connection.java
src/main/src/: main.cpp
src/osc/: CMakeLists.txt
src/osc/include/: osc_handler.h  osc_listener.h  osc_sender.h
src/osc/src/: osc_handler.cpp  osc_listener.cpp  osc_sender.cpp
src/scope/: CMakeLists.txt
src/scope/include/: scope_reader.h
src/scope/src/: scope_reader.cpp
src/websockets/: CMakeLists.txt
src/websockets/include/: server.h
src/websockets/src/: server.cpp
test/: CMakeLists.txt  osc.cpp  test.cpp
